<resources>
    <string name="app_name">Animeyou</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tanggal_rilis">tanggal rilis</string>
    <string name="image_anime" />
    <string name="judul">judul</string>
    <string name="search_hint">input keyword</string>
    <string name="genre">genre</string>
    <string name="hari">Hari</string>
    <string name="hari_jadwal">Hari %s</string>
    <string name="judul_film">judul film</string>
    <string name="title_date_release">Date Release</string>
    <string name="find_anime">Input Keyword</string>
    <string name="find">Find Animie</string>
    <string name="search">Search</string>
    <string name="like_follow"><![CDATA[Like & follow media sosial resmi kami untuk mendapatkan informasi terbaru Anime Subtitle Indonesia]]></string>
</resources>
