<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_list_anime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/layout_tiny_margin"
    android:layout_marginTop="2dp"
    android:layout_marginRight="@dimen/layout_tiny_margin"
    android:layout_marginBottom="2dp"
    android:background="@color/colorPrimaryDark"
    card_view:cardCornerRadius="@dimen/layout_small_margin">

    <LinearLayout
        android:background="@color/colorBackground"
        android:id="@+id/cv_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_item_movie"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="@dimen/layout_tiny_margin">

            <ImageView
                android:id="@+id/gambar_anime"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/image_anime"
                tools:src="@color/colorAccent" />

            <TextView
                android:layout_marginTop="@dimen/layout_tiny_margin"
                android:id="@+id/tv_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/layout_tiny_margin"
                android:layout_toEndOf="@id/gambar_anime"
                android:layout_toRightOf="@id/gambar_anime"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                tools:text="@string/judul" />
            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/layout_tiny_margin"
                android:layout_toEndOf="@id/gambar_anime"
                android:layout_toRightOf="@id/gambar_anime"
                android:layout_below="@id/tv_judul"
                android:textColor="@color/colorBlack"
                tools:text="@string/genre" />

            <TextView
                android:id="@+id/tv_rilis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/gambar_anime"
                android:layout_marginTop="@dimen/layout_tiny_margin"
                android:layout_marginBottom="@dimen/layout_small_margin"
                android:maxLines="5"
                tools:text="@string/tanggal_rilis" />

        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>