<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_list_jadwal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/layout_tiny_margin"
    android:layout_marginTop="2dp"
    android:layout_marginRight="@dimen/layout_tiny_margin"
    android:layout_marginBottom="2dp"
    android:background="@color/colorPrimaryDark"
    card_view:cardCornerRadius="@dimen/layout_small_margin">

    <LinearLayout
        android:id="@+id/cv_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_item_movie"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:padding="@dimen/layout_tiny_margin">

            <ImageView
                android:id="@+id/gambar_anime"
                android:layout_width="140dp"
                android:layout_height="160dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/image_anime"
                tools:src="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/layout_tiny_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/layout_tiny_margin"
                android:layout_toEndOf="@id/gambar_anime"
                android:layout_toRightOf="@id/gambar_anime"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                tools:text="@string/judul" />

            <TextView
                android:id="@+id/tv_judul_anime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_judul"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/layout_tiny_margin"
                android:layout_toEndOf="@id/gambar_anime"
                android:layout_toRightOf="@id/gambar_anime"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/judul_film" />

            <!--hari-->
            <TextView
                android:id="@+id/tv_hari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_judul_anime"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/layout_tiny_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/layout_tiny_margin"
                android:layout_toEndOf="@id/gambar_anime"
                android:layout_toRightOf="@id/gambar_anime"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                tools:text="@string/hari" />

            <TextView
                android:drawableLeft="@drawable/ic_date_range"
                android:drawableStart="@drawable/ic_date_range"
                android:drawablePadding="2dp"
                android:id="@+id/tv_hari_anime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_hari"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/layout_tiny_margin"
                android:layout_toEndOf="@id/gambar_anime"
                android:layout_toRightOf="@id/gambar_anime"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/hari_jadwal" />
        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>